Added Armor Items Textures, Mk. 5 & 4 (with the suitcase functionality), turning off arms and head are now tag supported.