@@ -24,7 +24,7 @@ import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.Minecraft;
 
-import net.maketendo.forgedreactor.client.model.Modelmk4_iron_armor;
+import net.maketendo.forgedreactor.client.model.Modelmk4_armor;
 
 import java.util.function.Consumer;
 import java.util.Map;
@@ -87,7 +87,7 @@ public abstract class Mk4IronArmorItem extends ArmorItem {
 				@Override
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("head", new Modelmk4_iron_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_iron_armor.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
+							Map.of("head", new Modelmk4_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_armor.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
@@ -127,9 +127,9 @@ public abstract class Mk4IronArmorItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelmk4_iron_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_iron_armor.LAYER_LOCATION)).Body, "left_arm",
-							new Modelmk4_iron_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_iron_armor.LAYER_LOCATION)).LeftArm, "right_arm",
-							new Modelmk4_iron_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_iron_armor.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelmk4_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_armor.LAYER_LOCATION)).Body, "left_arm",
+							new Modelmk4_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_armor.LAYER_LOCATION)).LeftArm, "right_arm",
+							new Modelmk4_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_armor.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
@@ -168,8 +168,8 @@ public abstract class Mk4IronArmorItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modelmk4_iron_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_iron_armor.LAYER_LOCATION)).LeftArm, "right_leg",
-									new Modelmk4_iron_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_iron_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new Modelmk4_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
+									new Modelmk4_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -209,8 +209,8 @@ public abstract class Mk4IronArmorItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modelmk4_iron_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_iron_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new Modelmk4_iron_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_iron_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new Modelmk4_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
+									new Modelmk4_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmk4_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
